<resources>
    <string name="app_name">EganWarmingCenter</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="tab1">tab1</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="enabledimage">enabledImage</string>

    <string-array name="permissionsTypes">
        <item>Admin</item>
        <item>Cahoots</item>
        <item>Driver</item>
        <item>Driver Coordinator</item>
        <item>Kitchen Lead</item>
        <item>Logistics</item>
        <item>Shift Lead</item>
        <item>Site Lead</item>
    </string-array>

</resources>
